dstar-gateway-core/tests/compile_fail/server_handle_voice_in_unknown_state.stderr
warning: unreachable statement
  --> tests/compile_fail/server_handle_voice_in_unknown_state.rs:20:5
   |
15 |     let session: ServerSession<DExtra, Unknown> = todo!();
   |                                                   ------- any code following this expression is unreachable
...
20 |     let _ = session.handle_voice_data(Instant::now(), &[0u8; 0]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `handle_voice_data` found for struct `ServerSession<dstar_gateway_core::DExtra, dstar_gateway_core::session::server::Unknown>` in the current scope
  --> tests/compile_fail/server_handle_voice_in_unknown_state.rs:20:21
   |
20 |     let _ = session.handle_voice_data(Instant::now(), &[0u8; 0]);
   |                     ^^^^^^^^^^^^^^^^^ method not found in `ServerSession<dstar_gateway_core::DExtra, dstar_gateway_core::session::server::Unknown>`
   |
   = note: the method was found for
           - `ServerSession<P, dstar_gateway_core::session::server::Streaming>`
